--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,3 +1,26 @@
 ---
 title: Ryan Cobb
 ---
+
+section.intro
+  div.container
+    h1 Vertical Timeline
+
+section.timeline
+  ul
+    li 
+      div 
+        time 2016 - Current
+        | MX
+    li
+      div
+        time 2015 - 2016
+        | MasteryConnect
+    li
+      div
+        time 2013 - 2015
+        | Orbital ATK
+    li
+      div
+        time Feb 2013 - Dec 2013
+        | PolyPhaser 
