--- a/source/stylesheets/timeline.css.scss
+++ b/source/stylesheets/timeline.css.scss
@@ -16,10 +16,18 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: inherit;
+  background: #fff;
+  transition: background .5s ease-in-out;
+}
+
+.timeline ul li.in-view::after {
+  background: #F45B69;
 }
 
 .timeline ul li div {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .5s ease-in-out;
   position: relative;
   bottom: 0;
   width: 400px;
@@ -38,6 +46,7 @@
 
 .timeline ul li:nth-child(odd) div {
   left: 45px;
+  transform: translate3d(200px,0,0);
 }
 
 .timeline ul li:nth-child(odd) div::before {
@@ -48,10 +57,17 @@
 
 .timeline ul li:nth-child(even) div {
   left: -439px;
+  transform: translate3d(-200px,0,0);
 }
 
 .timeline ul li:nth-child(even) div::before {
   right: -15px;
   border-width: 8px 0 8px 16px;
   border-color: transparent transparent transparent #F45B69;
+}
+
+.timeline ul li.in-view div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
 }
